@@ -25,6 +25,7 @@ lgl_db_get_brand_list
 lgl_db_free_brand_list
 lgl_db_register_template
 lgl_db_does_template_exist
+lgl_db_does_template_name_exist
 lgl_db_get_template_name_list_unique
 lgl_db_get_template_name_list_all
 lgl_db_free_template_name_list
@@ -73,6 +74,11 @@ lgl_xml_template_create_template_node
 <SECTION>
 <FILE>enums</FILE>
 lglUnitsType
+</SECTION>
+
+<SECTION>
+<FILE>str</FILE>
+lgl_str_utf8_casecmp
 </SECTION>
 
 <SECTION>
