@@ -14,7 +14,6 @@
     <xi:include href="xml/template.xml"/>
     <xi:include href="xml/paper.xml"/>
     <xi:include href="xml/category.xml"/>
-    <xi:include href="xml/enums.xml"/>
   </chapter>
 
   <chapter>
@@ -23,6 +22,12 @@
     <xi:include href="xml/xml-category.xml"/>
     <xi:include href="xml/xml-template.xml"/>
     <xi:include href="xml/xml.xml"/>
+  </chapter>
+
+  <chapter>
+    <title>Miscellaneous</title>
+    <xi:include href="xml/enums.xml"/>
+    <xi:include href="xml/str.xml"/>
   </chapter>
 
 </book>
